src/test/ui/const-generics/issues/issue-72819-generic-in-const-eval.min.stderr
error: generic parameters must not be used inside of non trivial constant values
  --> $DIR/issue-72819-generic-in-const-eval.rs:9:17
   |
LL | where Assert::<{N < usize::max_value() / 2}>: IsTrue,
   |                 ^ non-trivial anonymous constants must not depend on the parameter `N`
   |
   = help: it is currently only allowed to use either `N` or `{ N }` as generic constants

error: aborting due to previous error

